# phonosyne

./: .env.example  .gitignore  README.md  pyproject.toml  tools.py
agents/: compiler.py
briefs/: entropy.md  iconoclast.md  parasitic-loop.md  stress-test.md  theurgist.md
docs/: overview.md  recipes.md
docs/battle/: inputs.md
docs/cards/: justice.html  justice.md  strength.html  strength.md  styles.css  the-chariot.html  the-chariot.md  the-empress.html  the-empress.md  the-fool.html  the-fool.md  the-hanged-one.html  the-hanged-one.md  the-hermit.html  the-hermit.md  the-hierophant.html  the-hierophant.md  the-high-priestess.html  the-high-priestess.md  the-lovers.html  the-lovers.md  the-magician.html  the-magician.md  wheel-of-fortune.html  wheel-of-fortune.md
phonosyne/: __init__.py  cli.py  orchestrator.py  sdk.py  settings.py  tools.py
phonosyne/agents/: __init__.py  analyzer.py  base.py  compiler.py  designer.py  orchestrator.py  schemas.py
phonosyne/dsp/: __init__.py  master.py  trim.py  utils.py  validators.py
phonosyne/dsp/effects/: __init__.py  autowah.py  (+18 more)
phonosyne/utils/: __init__.py  exec_env.py  slugify.py  string_utils.py
prompts/: analyzer.md  compiler.md  designer.md  orchestrator.md  supercollider.md
scripts/: effect-corrupt.py  effect-crush.py  effect-fracture.py  effect-ghosts.py  effect-master.py  effect-melt.py  effect-warp.py  finalize.sh  kill.sc  osc_bootstrap.scd  phonosyne_cli.py  test.py  test.sc  test_openrouter_connection.py  test_run_supercollider.py  test_sc_osc.py  trim.sh  zeffect-echoes.py
tests/: test_tools.py
